# claude_profiler

./: .gitignore  README.md  pyproject.toml
claude_profiler/: analyzer.py  cli.py  collector.py  conversation.py  installer.py
