[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-profiler"
version = "0.1.0"
description = "Profile your Claude Code sessions - track time spent on model generation, tool calls, and idle time"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Debuggers",
]

[project.scripts]
claude-profiler = "claude_profiler.cli:main"

[project.urls]
Homepage = "https://github.com/user/claude-profiler"
Issues = "https://github.com/user/claude-profiler/issues"
